[gd_scene load_steps=3 format=3 uid="uid://bxlh1wahgqqe7"]

[ext_resource type="Script" uid="uid://bdulno2a2ughg" path="res://scenes/ui/healthbar.gd" id="1_3skqv"]
[ext_resource type="Texture2D" uid="uid://bpna5evcecbsr" path="res://assets/art/ui/healthbar-tick.png" id="1_mklva"]

[node name="Healthbar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 30.0
offset_bottom = 4.0
script = ExtResource("1_3skqv")

[node name="WhiteBorder" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1.0
offset_bottom = 4.0
scale = Vector2(30, 1)

[node name="ContentBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 3.0
scale = Vector2(28, 1)
color = Color(0.321569, 0, 0, 1)

[node name="HealthGauge" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 3.0
scale = Vector2(10, 1)
texture = ExtResource("1_mklva")
stretch_mode = 1
